# pytorch-tabular-experiment

./: .gitignore  README.md  pyproject.toml
pytorch-tabular-experiment/notebooks/: Simple model.ipynb
